Changelog
=========


2.2.1 (unreleased)
------------------

- Hide "More" button when there are no events. [jone]


2.2.0 (2016-06-01)
------------------

- Optimize performance of date index by storing timestamps. [jone]


2.1.0 (2016-03-21)
------------------

- Fix bug with collective.geo when indexing objects too early. [jone]

- Fix a bug which occurred when moving objects from and to the Plone Site.
  [mbaechtold]

- Fix fetching within tabbedview tabs.
  [jone]

- Add an Activity Portlet
  [elioschmutz]


2.0.0 (2015-09-30)
------------------

- Implement custom souper-based catalog for logging all activities separately.
  This allows us to also track delete activities.
  The rendering has changed completely: custom representations must be rewritten
  to the new renderer adapter.
  [jone]

- Remove support for collections.
  Because the activity feed will no longer be catalog based.
  [jone]


1.1.5 (2015-05-18)
------------------

- Fix diazo error when fetching more events.
  [jone]

- disable diazo themeing for ajax responses.
  [jone]


1.1.4 (2015-03-25)
------------------

- Fix width of too wide images.
  [Kevin Bieri]


1.1.3 (2014-11-18)
------------------

- Fixes a bug where the activity view crashed when the modifying user is no
  longer available.
  [mbaechtold]


1.1.2 (2014-09-24)
------------------

- Ignore comments in activity view.
  Fixes a bug where the activity view crashed when comments were added.
  [jone]


1.1.1 (2014-09-24)
------------------

- Empty brown-bag release.

1.1.0 (2014-09-04)
------------------

- Add support for collections.
  [jone]


1.0.0 (2014-09-03)
------------------

- Initial implementation.